Tests completados de Filters y ChallengeFilterDTO